plugins {
    id 'fabric-loom' version '1.9-SNAPSHOT'
    id 'maven-publish'
}

version = project.mod_version
group = project.maven_group

base {
    archivesName = project.archives_base_name
}

loom {
    mixin {
        defaultRefmapName = "ssc-addon.refmap.json"
    }
}

repositories {
    mavenLocal()
    // Aliyun
    maven { url 'https://maven.aliyun.com/nexus/content/groups/public' }
    mavenCentral()
    maven { url "https://maven.fabricmc.net/" }

    // AzureLib
    maven { url 'https://maven.azuredoom.com/mods' }
    maven { url 'https://dl.cloudsmith.io/public/azuredoom-mods/azurelib/maven/' }

    // KosmX (Player Animator)
    maven {
        name "KosmX's maven"
        url 'https://maven.kosmx.dev/'
    }

    // Owo
    maven { url 'https://maven.wispforest.io/releases/' }

    // Modrinth
    exclusiveContent {
        forRepository {
            maven {
                name = "Modrinth"
                url = "https://api.modrinth.com/maven"
            }
        }
        filter {
            includeGroup "maven.modrinth"
        }
    }

    // Forgemaven
    exclusiveContent {
        forRepository {
            maven {
                url "https://cursemaven.com"
            }
        }
        filter {
            includeGroup "curse.maven"
        }
    }

    // Others
    maven { url "https://maven.quiltmc.org/repository/release" }
    maven { url "https://maven.ladysnake.org/releases" }
    maven {
        url = "https://maven.cafeteria.dev"
        content { includeGroup "net.adriantodt.fabricmc" }
    }
    maven {
        url = "https://maven.jamieswhiteshirt.com/libs-release"
        content { includeGroup "com.jamieswhiteshirt" }
    }
    maven { url "https://masa.dy.fi/maven" }
    maven { url "https://jitpack.io" }
    maven { url "https://maven.shedaniel.me" }
    maven { url "https://maven.terraformersmc.com" }
}

dependencies {
    // To change the versions see the gradle.properties file
    minecraft "com.mojang:minecraft:${project.minecraft_version}"
    mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
    modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"

    // Mixin Annotation Processor
    annotationProcessor "net.fabricmc:fabric-mixin-compile-extensions:0.6.0"

    // Fabric API
    modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"

    // Shape Shifter Curse Main Mod
    modImplementation "maven.modrinth:shape-shifter-curse:${project.ssc_version}"
    
    // Player Animator
    modImplementation "dev.kosmx.player-anim:player-animation-lib-fabric:${project.player_anim}"

    // Apoli & Dependencies
    modImplementation "com.github.apace100:apoli:${project.apoli_version}"
    modImplementation "mod.azure.azurelib:azurelib-fabric-1.20.1:${azurelib_version}"
    modImplementation "dev.emi:trinkets:${project.trinkets_version}"
    modImplementation ("com.terraformersmc:modmenu:${project.modmenu_version}"){transitive = false}
    modImplementation "com.jamieswhiteshirt:reach-entity-attributes:${project.reach_version}"
    
    // Config & Components (Usually needed by Apoli/Origins)
    modApi("me.shedaniel.cloth:cloth-config-fabric:${project.clothconfig_version}") {
        exclude(group: "net.fabricmc.fabric-api")
    }
    modApi("dev.onyxstudios.cardinal-components-api:cardinal-components-base:${cca_version}") {
        exclude(group: "net.fabricmc.fabric-api")
    }
    modApi("dev.onyxstudios.cardinal-components-api:cardinal-components-entity:${cca_version}") {
        exclude(group: "net.fabricmc.fabric-api")
    }

    // Calio (included in Apoli, but good to ensure availability)
    // implementation "io.github.apace100:calio:${project.calio_version}" 
}

processResources {
    inputs.property "version", project.version

    filesMatching("fabric.mod.json") {
        expand "version": project.version
    }
}

tasks.withType(JavaCompile).configureEach {
    it.options.release = 17
}

java {
    // Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
    // if it is present.
    // If you remove this line, sources will not be generated.
    withSourcesJar()

    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

jar {
    from("LICENSE") {
        rename { "${it}_${project.base.archivesName.get()}"}
    }
}
